traefik/services.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: web
      port: 80
      nodePort: 30080
    - protocol: TCP
      name: admin
      port: 8080
      nodePort: 30081
    - protocol: TCP
      name: websecure
      port: 443
      nodePort: 30443
  selector:
    app: traefik

---
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami
