traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 80
      nodePort: 30101
    - protocol: TCP
      name: admin
      port: 8080
      nodePort: 30103
  selector:
    app: traefik
