traefik/httpbin.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect-scheme
  namespace: httpbin
spec:
  redirectScheme:
    scheme: https
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: httpbin

spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      serviceAccountName: httpbin
      containers:
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    app: httpbin
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: httpbin
---
  
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: httpbin
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`httpbin.blualism.com`)
    kind: Rule
    services:
    - name: httpbin
      port: 80
    middlewares:
      - name: https-redirect-scheme

  tls:
    certResolver: default
---
