traefik/ingress-routes.yml
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: simpleingressroute
#   namespace: default
# spec:
#   entryPoints:
#     - web
#   routes:
#   - match: Host(`dev.blualism.com`) && PathPrefix(`/notls`)
#     kind: Rule
#     services:
#     - name: whoami
#       port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`dev.blualism.com`)
    kind: Rule
    services:
    - name: whoami
      port: 80
    middlewares:
      - name: https-redirect-scheme

  tls:
    certResolver: default
